# Mlops02476

./: README.md  pyproject.toml  requirements_dev.txt  tasks.py
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
tests/: test_data.py  test_model.py
